--- a/angular/src/app/auth/login/login.component.html
+++ b/angular/src/app/auth/login/login.component.html
@@ -7,17 +7,16 @@
                     <div class="text-900 text-3xl font-medium mb-3">Chào mừng, Admin !</div>
                     <span class="text-600 font-medium">Đăng nhập</span>
                 </div>
-
-                <div>
+                <div [formGroup] ="loginForm" >
                     <label for="email1" class="block text-900 text-xl font-medium mb-2">Email</label>
-                    <input id="email1" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem">
+                    <input id="email1" formControlName = "username" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem">
 
                     <label for="password1" class="block text-900 font-medium text-xl mb-2">Mật khẩu</label>
-                    <p-password id="password1" [(ngModel)]="password" placeholder="Password" [toggleMask]="true" styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
+                    <p-password id="password1" formControlName = "password" placeholder="Password" [toggleMask]="true" styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
 
                     <div class="flex align-items-center justify-content-between mb-5 gap-5">
                     </div>
-                    <button pButton pRipple label="Đăng nhập" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+                    <button pButton pRipple (click)="login()" label="Đăng nhập" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
                 </div>
             </div>
         </div>
