feat: add logout feature

--- a/angular/src/app/layout/app.topbar.component.html
+++ b/angular/src/app/layout/app.topbar.component.html
@@ -1,7 +1,7 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" routerLink="">
         <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="logo">
-        <span>SAKAI</span>
+        <span>TomStore</span>
     </a>
 
     <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
@@ -15,15 +15,16 @@
     <div #topbarmenu class="layout-topbar-menu" [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}">
         <button class="p-link layout-topbar-button">
             <i class="pi pi-calendar"></i>
-            <span>Calendar</span>
+            <span>Thời gian</span>
         </button>
-        <button class="p-link layout-topbar-button">
+        <button label="Toggle" (click)="menu.toggle($event)" class="p-link layout-topbar-button">
             <i class="pi pi-user"></i>
-            <span>Profile</span>
+            <span>Tài khoản</span>
         </button>
         <button class="p-link layout-topbar-button" [routerLink]="'/documentation'">
             <i class="pi pi-cog"></i>
-            <span>Settings</span>
+            <span>Cài đặt</span>
         </button>
     </div>
 </div>
+<p-tieredMenu #menu [model]="userMenuItems" [popup]="true"></p-tieredMenu>
