feat: Add logout and category controller api

--- a/angular/src/app/auth/login/login.component.html
+++ b/angular/src/app/auth/login/login.component.html
@@ -16,7 +16,7 @@
 
                     <div class="flex align-items-center justify-content-between mb-5 gap-5">
                     </div>
-                    <button pButton pRipple (click)="login()" label="Đăng nhập" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+                    <button pButton pRipple (click)="login()" label="Đăng nhập" class="w-full p-3 text-xl"></button>
                 </div>
             </div>
         </div>
