--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -9,25 +9,38 @@
   <p-table #pnl [value]="items">
     <ng-template pTemplate="header">
         <tr>
-            <th>Code</th>
-            <th>Name</th>
-            <th>Category</th>
-            <th>Quantity</th>
+            <th>Mã</th>
+            <th>Sku</th>
+            <th>Tên</th>
+            <th>Loại</th>
+            <th>Tên danh mục</th>
+            <th>Thứ tự</th>
+            <th>Hiển thị</th>
+            <th>Kích hoạt</th>
+
         </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-product>
+    <ng-template pTemplate="body" let-row>
         <tr>
-            <td>{{ product.code }}</td>
-            <td>{{ product.name }}</td>
-            <td>{{ product.category }}</td>
-            <td>{{ product.quantity }}</td>
+            <td>{{ row.code }}</td>
+            <td>{{ row.sku }}</td>
+            <td>{{ row.name }}</td>
+            <td>{{ row.productType }}</td>
+            <td>{{ row.categoryId }}</td>
+            <td>{{ row.sortOrder }}</td>
+            <td>{{ row.visibility }}</td>
+            <td>{{ row.isActive }}</td>
         </tr>
     </ng-template>
+    <ng-template pTemplate="summary">
+      <div class="text-align: left">Tổng số bản ghi : {{totalCount | number}}</div>
+    </ng-template>
+    
   </p-table>
   <!-- Paginator -->
   <p-paginator 
-      [rows]="10" 
-      [totalRecords]="120" 
+      [rows]="maxResultCount" 
+      [totalRecords]="totalCount" 
       [rowsPerPageOptions]="[10, 20, 30]"> 
   </p-paginator>
   <!-- Block UI -->
