--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -1,8 +1,33 @@
 <p-panel header="Danh sách sản phẩm">
   <!-- Filter -->
   <div class="grid">
-    <div class="col-4">4</div>
-    <div class="col-8">8</div>
+    <div class="col-4">
+      <button 
+      pButton
+      type="button"
+      icon="pi pi-plus"
+      iconPos="left"
+      label="Thêm mới"
+      >
+      </button>
+    </div>
+    <div class="col-8">
+      <div class="formgroup-inline">
+        <div class="field">
+            <label for="txt-keyword"  class="p-sr-only">Từ khóa</label>
+            <input id="txt-keyword" pInputText type="text" placeholder="Nhập từ khóa">
+        </div>
+        <div class="field">
+          <p-dropdown 
+            [options]="productCategories" 
+            [(ngModel)]="categoryId" 
+            placeholder="Chọn danh mục">
+          </p-dropdown>
+        </div>
+        <button type="button" pButton
+        (click)="loadData()">Tìm kiếm</button>
+      </div>
+    </div>
   </div>
   <!-- Table -->
   
@@ -17,7 +42,6 @@
             <th>Thứ tự</th>
             <th>Hiển thị</th>
             <th>Kích hoạt</th>
-
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-row>
@@ -35,7 +59,7 @@
     <ng-template pTemplate="summary">
       <div class="text-align: left">Tổng số bản ghi : {{totalCount | number}}</div>
     </ng-template>
-    
+
   </p-table>
   <!-- Paginator -->
   <p-paginator 
