--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -1,6 +1,6 @@
 $gutter: 1rem; //for primeflex grid system
 @import "assets/layout/styles/layout/layout.scss";
-
+@import "primeicons/primeicons.css";
 /* PrimeNG */
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeflex/primeflex.scss";
