feat: add spinner loading

--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -68,5 +68,5 @@
       [rowsPerPageOptions]="[10, 20, 30]"> 
   </p-paginator>
   <!-- Block UI -->
-  <p-blockUI [target]="pnl" [blocked]="blockedPanel"></p-blockUI>
+  <p-blockUI [target]="pnl" [blocked]="blockedPanel"><p-progressSpinner ariaLabel="loading"></p-progressSpinner></p-blockUI>
 </p-panel>
