feat: add creat form

--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -4,6 +4,7 @@
     <div class="col-4">
       <button 
       pButton
+      (click) = "showAddModal()"
       type="button"
       icon="pi pi-plus"
       iconPos="left"
