--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -11,6 +11,17 @@
       label="Thêm mới"
       >
       </button>
+      <button 
+      pButton
+      (click) = "showEditModal()"
+      type="button"
+      icon="pi pi-minus"
+      *ngIf="selectedItems.length == 1"
+      class="ml-1 p-button-help"
+      iconPos="left"
+      label="Sửa"
+      >
+      </button>
     </div>
     <div class="col-8">
       <div class="formgroup-inline">
@@ -32,9 +43,12 @@
   </div>
   <!-- Table -->
   
-  <p-table #pnl [value]="items">
+  <p-table #pnl [value]="items" [(selection)]="selectedItems">
     <ng-template pTemplate="header">
         <tr>
+            <th style="width: 10px;">
+              <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+            </th>
             <th>Mã</th>
             <th>Sku</th>
             <th>Tên</th>
@@ -47,14 +61,24 @@
     </ng-template>
     <ng-template pTemplate="body" let-row>
         <tr>
+          <th style="width: 10px;">
+            <span class="ui-column-title"></span>
+            <p-tableCheckbox [value]="row"></p-tableCheckbox>
+          </th>
             <td>{{ row.code }}</td>
             <td>{{ row.sku }}</td>
             <td>{{ row.name }}</td>
             <td>{{ row.productType }}</td>
             <td>{{ row.categoryId }}</td>
             <td>{{ row.sortOrder }}</td>
-            <td>{{ row.visibility }}</td>
-            <td>{{ row.isActive }}</td>
+            <td>
+              <p-badge *ngIf="row.visiblity == 1" severity ="success" value="Hiển thị"></p-badge>
+              <p-badge *ngIf="row.visiblity == 0" severity ="danger" value="Ẩn"></p-badge>
+            </td>
+            <td>
+              <p-badge *ngIf="row.isActive == 1" severity ="success" value="Kích hoạt"></p-badge>
+              <p-badge *ngIf="row.isActive == 0" severity ="danger" value="Chưa kích hoạt"></p-badge>
+            </td>
         </tr>
     </ng-template>
     <ng-template pTemplate="summary">
