feat: clean product data

--- a/angular/src/app/product/product-detail.component.html
+++ b/angular/src/app/product/product-detail.component.html
@@ -107,8 +107,8 @@
         ></app-validation-message>
       </div>
       <div class="field-checkbox col-12 md:col-3">
-        <p-checkbox formControlName="visiblity" binary="true" id="visiblity"></p-checkbox>
-        <label for="visiblity">Hiển thị</label>
+        <p-checkbox formControlName="visibility" binary="true" id="visibility"></p-checkbox>
+        <label for="visibility">Hiển thị</label>
       </div>
       <div class="field-checkbox col-12 md:col-3">
         <p-checkbox formControlName="isActive" binary="true" id="isActive"></p-checkbox>
