--- a/angular/src/app/product/product-detail.component.html
+++ b/angular/src/app/product/product-detail.component.html
@@ -100,11 +100,18 @@
       <div class="field col-12">
         <label for="sellPrice" class="block">Giá bán <span class="required">*</span></label>
         <p-inputNumber formControlName="sellPrice"></p-inputNumber>
-        <app-validation-message
-          [entityForm]="form"
-          fieldName="sellPrice"
-          [validationMessages]="validationMessages"
-        ></app-validation-message>
+      </div>
+      <div class="field col-12 md:col-6">
+        <label for="thumbnailImage" class="block">Hình ảnh</label>
+        <input id="thumbnailImage" type="file" (change)="onFileChange($event)" class="w-full">
+      </div>
+      <div class="field col-12 md:col-6">
+        <p-image
+          [src]="thumbnailImage"
+          [alt]="selectedEntity.name"
+          width="250"
+          [preview]="true"
+        ></p-image>
       </div>
       <div class="field-checkbox col-12 md:col-3">
         <p-checkbox formControlName="visibility" binary="true" id="visibility"></p-checkbox>
