feat: add property function to product

--- a/angular/src/app/product/product.component.html
+++ b/angular/src/app/product/product.component.html
@@ -68,6 +68,7 @@
             <th>Thứ tự</th>
             <th>Hiển thị</th>
             <th>Kích hoạt</th>
+            <th></th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-row>
@@ -89,6 +90,18 @@
             <td>
               <p-badge *ngIf="row.isActive == 1" severity ="success" value="Kích hoạt"></p-badge>
               <p-badge *ngIf="row.isActive == 0" severity ="danger" value="Chưa kích hoạt"></p-badge>
+            </td>
+            <td>
+              <button
+              pButton
+              pRipple
+              type="button"
+              label="Thuộc tính"
+              icon="fa fa-pencil"
+              class="p-button-text"
+              (click)="manageProductAttribute(row.id)"
+            >
+            </button>
             </td>
         </tr>
     </ng-template>
