--- a/aspnet-core/src/Store.Public.Web/Pages/_ViewImports.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI
 @addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI.Bootstrap
 @addTagHelper *, Volo.Abp.AspNetCore.Mvc.UI.Bundling
+@addTagHelper *, Store.Public.Web
