feat: fixing order page + sending email

--- a/aspnet-core/src/Store.Public.Web/Pages/Shared/Components/Footer/Default.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Shared/Components/Footer/Default.cshtml
@@ -1,4 +1,73 @@
-﻿﻿<footer class="footer">
+﻿﻿<section class="section-box mt-90 mb-50">
+    <div class="container">
+        <ul class="list-col-5">
+            <li>
+                <div class="item-list">
+                <div class="icon-left"><img src="/assets/imgs/template/secure.svg" alt="Ecom"></div>
+                    <div class="info-right">
+                    <h5 class="font-lg-bold color-gray-100">Thanh toán</h5>
+                    <p class="font-sm color-gray-500">100% An toàn</p>
+                </div>
+                </div>
+            </li>
+            <li>
+              <div class="item-list">
+                <div class="icon-left"><img src="/assets/imgs/template/delivery.svg" alt="Ecom"></div>
+                <div class="info-right">
+                  <h5 class="font-lg-bold color-gray-100">Free Ship</h5>
+                  <p class="font-sm color-gray-500">Free ship toàn quốc</p>
+                </div>
+              </div>
+            </li>
+            <li>
+                <div class="item-list">
+                    <div class="icon-left"><img src="/assets/imgs/template/support.svg" alt="Ecom"></div>
+                    <div class="info-right">
+                        <h5 class="font-lg-bold color-gray-100">Hỗ trợ 24/7</h5>
+                        <p class="font-sm color-gray-500">Hỗ trợ chuyên sâu</p>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="item-list">
+                    <div class="icon-left"><img src="/assets/imgs/template/voucher.svg" alt="Ecom"></div>
+                    <div class="info-right">
+                        <h5 class="font-lg-bold color-gray-100">Gift voucher</h5>
+                        <p class="font-sm color-gray-500">Giới thiệu bạn bè</p>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="item-list">
+                    <div class="icon-left"><img src="/assets/imgs/template/return.svg" alt="Ecom"></div>
+                    <div class="info-right">
+                        <h5 class="font-lg-bold color-gray-100">Hoàn Trả</h5>
+                        <p class="font-sm color-gray-500">Hoàn trả lên đến 100%</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
+<section class="section-box box-newsletter">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-7 col-sm-12">
+                <h3 class="color-white">Đăng Ký &amp; Nhận <span class="color-warning">10%</span> Giảm Giá</h3>
+                <p class="font-lg color-white">Nhận thông báo từ trang <span class="font-lg-bold">cho deal giảm giá.</span></p>
+            </div>
+            <div class="col-lg-4 col-md-5 col-sm-12">
+                <div class="box-form-newsletter mt-15">
+                    <form class="form-newsletter">
+                        <input class="input-newsletter font-xs" value="" placeholder="Địa chỉ email">
+                        <button class="btn btn-brand-2">Đăng ký</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="footer">
     <div class="footer-1">
         <div class="container">
             <div class="row">
@@ -58,7 +127,6 @@
             <div class="footer-bottom mt-20">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 text-center text-lg-start"><span class="color-gray-900 font-sm">Copyright &copy; 2024 Ecom Market. All rights reserved.</span></div>
-
                 </div>
             </div>
         </div>
