--- a/aspnet-core/src/Store.Public.Web/Pages/Shared/Components/Header/Default.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Shared/Components/Header/Default.cshtml
@@ -88,7 +88,6 @@
                         <div class="dropdown-account">
                             <ul>
                                 <li><a href="/login.html">Đăng nhập</a></li>
-                                <li><a href="/register.html">Đăng ký</a></li>
                             </ul>
                         </div>
                     </div>
@@ -117,8 +116,8 @@
                                     <div class="col-6"><span class="font-md-bold color-brand-1">$2586.3</span></div>
                                 </div>
                                 <div class="row mt-15">
-                                    <div class="col-6 text-start"><a class="btn btn-cart w-auto" href="shop-cart.html">View cart</a></div>
-                                    <div class="col-6"><a class="btn btn-buy w-auto" href="shop-checkout.html">Checkout</a></div>
+                                    <div class="col-6 text-start"><a class="btn btn-cart w-auto" href="shop-cart.html">Xem</a></div>
+                                    <div class="col-6"><a class="btn btn-buy w-auto" href="check-out.html">Thanh toán</a></div>
                                 </div>
                             </div>
                         </div>
