--- a/aspnet-core/src/Store.Public.Web/Pages/Shared/_Layout.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Shared/_Layout.cshtml
@@ -11,6 +11,9 @@
     <meta name="author" content="">
     <link rel="shortcut icon" type="image/x-icon" href="/assets/imgs/template/favicon.svg">
     <link href="/assets/css/style.css?v=3.0.0" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     @RenderSection("styles", required: false)
     <title>Tom Store</title>
 </head>
