--- a/aspnet-core/src/Store.Public.Web/Pages/Cart/Checkout.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Cart/Checkout.cshtml
@@ -1,4 +1,136 @@
 ﻿@page "/check-out.html"
+@using Store.Public.Products
 @model Store.Public.Web.Pages.Cart.CheckoutModel
+@inject IProductsAppService _productsAppService;
+
 @{
 }
+<div class="section-box">
+    <div class="breadcrumbs-div">
+        <div class="container">
+            <ul class="breadcrumb">
+                <li><a class="font-xs color-gray-1000" href="/">Home</a></li>
+                <li><a class="font-xs color-gray-500" href="#">Shop</a></li>
+                <li><a class="font-xs color-gray-500" href="#">Checkout</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<section class="section-box shop-template">
+    <div class="container">
+        @if (Model.CreateStatus != null)
+        {
+                <div class="row">
+                @if (Model.CreateStatus == true)
+                {
+                            <div class="alert alert-success" role="alert">
+                                Create order successful.
+                            </div>
+                }
+                else
+                {
+                            <div class="alert alert-danger" role="alert">
+                                Create order failed, please try again!
+                            </div>
+                }
+                </div>
+        }
+        @if (Model.CreateStatus == null)
+        {
+                <div class="row">
+                    <div class="col-lg-6">
+
+                        <form method="post">
+                            <div class="box-border">
+                                
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <h5 class="font-md-bold color-brand-3 mt-15 mb-20">Địa chỉ giao hàng</h5>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="form-group">
+                                            <input class="form-control font-sm" type="text" asp-for="Order.CustomerName" placeholder="Họ và tên*">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <div class="form-group">
+                                            <input class="form-control font-sm" type="text" asp-for="Order.CustomerAddress" placeholder="Địa chỉ*">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <div class="form-group">
+                                            <input class="form-control font-sm" type="text" asp-for="Order.CustomerPhoneNumber" placeholder="Số điện thoại*">
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="row mt-20">
+                                <div class="col-lg-6 col-5 mb-20"><a class="btn font-sm-bold color-brand-1 arrow-back-1" href="/shop-cart.html">Trở về giỏ hàng</a></div>
+                                <div class="col-lg-6 col-7 mb-20 text-end"><button class="btn btn-buy w-auto arrow-next" type="submit">Đặt hàng</button></div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="box-border">
+                            <h5 class="font-md-bold mb-20">Đơn hàng của bạn</h5>
+                            <div class="listCheckout">
+                            @foreach (var item in Model.CartItems)
+                            {
+                                var url = $"/products/{item.Product.CategorySlug}/{item.Product.Slug}.html";
+                                var fileContent = await _productsAppService.GetThumbnailImageAsync(item.Product.ThumbnailPicture);
+                                var base64Image = Store.Helpers.ImageHelper.ShowBase64(item.Product.ThumbnailPicture, fileContent);
+                                        <div class="item-wishlist">
+                                            <div class="wishlist-product">
+                                                <div class="product-wishlist">
+                                                    <div class="product-info">
+                                                        <a href="@url">
+                                                            <h6 class="color-brand-3">@item.Product.Name</h6>
+                                                        </a>
+                                                        <div class="rating">
+                                                            <img src="assets/imgs/template/icons/star.svg" alt="Ecom">
+                                                            <img src="assets/imgs/template/icons/star.svg" alt="Ecom">
+                                                            <img src="assets/imgs/template/icons/star.svg" alt="Ecom">
+                                                            <img src="assets/imgs/template/icons/star.svg" alt="Ecom">
+                                                            <img src="assets/imgs/template/icons/star.svg" alt="Ecom">
+                                                            <span class="font-xs color-gray-500"> (65)</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="wishlist-status">
+                                                <p class="font-sm-bold d-inline-block color-brand-3">@item.Quantity</p>
+                                            </div>
+                                            <div class="wishlist-price">
+                                                 <p class="font-sm-bold d-inline-block color-brand-3">@String.Format("{0:n0}đ",item.Product.SellPrice * item.Quantity)</p>
+                                            </div>
+                                        </div>
+                            }
+
+                            </div>
+                            <div class="form-group d-flex mt-15">
+                                <input class="form-control mr-15" placeholder="Nhập mã giảm giá nếu có">
+                                <button class="btn btn-buy w-auto">Áp dụng</button>
+                            </div>
+                            <div class="form-group mb-0">
+                                <div class="row mb-10">
+                                    <div class="col-lg-6 col-6"><span class="font-md-bold color-brand-3">Tổng đơn hàng</span></div>
+                                    <div class="col-lg-6 col-6 text-end"><p class="font-sm-bold d-inline-block color-brand-3">@String.Format("{0:n0} đ", @Model.CartItems.Sum(x => x.Product.SellPrice * x.Quantity))</p></div>
+                                </div>
+                                <div class="border-bottom mb-10 pb-5">
+                                    <div class="row">
+                                        <div class="col-lg-6 col-6"><span class="font-md-bold color-brand-3">Phí ship</span></div>
+                                        <div class="col-lg-6 col-6 text-end"><span class="font-lg-bold color-brand-3">-</span></div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-6 col-6"><span class="font-md-bold color-brand-3">Tông thanh toán</span></div>
+                                    <div class="col-lg-6 col-6 text-end"><p class="font-sm-bold d-inline-block color-brand-3">@String.Format("{0:n0} đ", @Model.CartItems.Sum(x => x.Product.SellPrice * x.Quantity))</p></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        }
+    </div>
+</section>
