--- a/aspnet-core/src/Store.Public.Web/Pages/Home/Index.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Home/Index.cshtml
@@ -87,65 +87,176 @@
             </div>
         </div>
     </section>
-    <section class="section-box">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5">
-                    <h3>Sản phẩm</h3>
-                    <p class="font-base">Chọn loại sản phẩm bạn mong muốn tìm kiếm</p>
-                </div>
-                <div class="col-lg-7">
-                    <div class="list-brands">
-                        <div class="box-swiper">
-                            <div class="swiper-container swiper-group-7">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><a href="#"><img src="/assets/imgs/slider/logo/acer.svg" alt="Ecom"></a></div>
-                                    <div class="swiper-slide"><a href="#"><img src="/assets/imgs/slider/logo/nokia.svg" alt="Ecom"></a></div>
-                                    <div class="swiper-slide"><a href="#"><img src="/assets/imgs/slider/logo/assus.svg" alt="Ecom"></a></div>
-                                    <div class="swiper-slide"><a href="#"><img src="/assets/imgs/slider/logo/casio.svg" alt="Ecom"></a></div>
-                                    <div class="swiper-slide"><a href="#"><img src="/assets/imgs/slider/logo/dell.svg" alt="Ecom"></a></div>
-                                    <div class="swiper-slide"><a href="#"><img src="/assets/imgs/slider/logo/panasonic.svg" alt="Ecom"></a></div>
-                                    <div class="swiper-slide"><a href="#"><img src="/assets/imgs/slider/logo/vaio.svg" alt="Ecom"></a></div>
-                                </div>
-                            </div>
+<section class="section-box mt-30">
+    <div class="container">
+        <div class="border-bottom pb-25 head-main">
+        <h3>Loại sản phẩm</h3>
+        <p class="font-base">Chọn sản phẩm bạn muốn.</p>
+        <!-- Button slider-->
+        <div class="box-button-slider">
+            <div class="swiper-button-next swiper-button-next-group-2"></div>
+            <div class="swiper-button-prev swiper-button-prev-group-2"></div>
+        </div>
+        <!-- End Button slider-->
+        </div>
+        <div class="mt-10">
+        <div class="box-swiper">
+            <div class="swiper-container swiper-group-style-2">
+            <div class="swiper-wrapper pt-5">
+                <div class="swiper-slide">
+                <ul class="list-9-col">
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-1.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Máy lọc không khí</a>
+                        <p class="font-xs color-gray-500">1025 món</p>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="mt-50">
-                 <div class="row">
-                @foreach (var item in Model.Categories)
-                {
-                var url = $"/products/{item.Code}.html";
-                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
-                    <div class="card-grid-style-2 card-grid-style-2-small hover-up">
-                        <div class="image-box">
-                            <a href="@url" title="@item.Name">
-                                <img src="/assets/imgs/page/homepage1/smartphone.png" alt="@item.Name">
-                            </a>
-                        </div>
-                        <div class="info-right">
-                            <a class="color-brand-3 font-sm-bold" title="@item.Name" href="@url">
-                                <h6>@item.Name</h6>
-                            </a>
-                            <ul class="list-links-disc">
-                            @foreach (var child in item.Children)
-                            {
-                                var childUrl = $"/products/{child.Code}.html";
-
-                                        <li><a class="font-sm" href="@childUrl">@child.Name</a></li>
-                            }
-                            </ul>
-                            <a class="btn btn-gray-abs" title="@item.Name" href="@url">View all</a>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-2.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Túi xách</a>
+                        <p class="font-xs color-gray-500">125 món</p>
                         </div>
                     </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-3.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Bluetooth</a>
+                        <p class="font-xs color-gray-500">625 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-4.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Đồ điện tử</a>
+                        <p class="font-xs color-gray-500">1025 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-5.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Gaming</a>
+                        <p class="font-xs color-gray-500">1025 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-6.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Ghế Gaming</a>
+                        <p class="font-xs color-gray-500">1025 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-7.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Tủ lạnh</a>
+                        <p class="font-xs color-gray-500">1025 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-8.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Đồ dùng bếp</a>
+                        <p class="font-xs color-gray-500">1025 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-9.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Phụ kiện</a>
+                        <p class="font-xs color-gray-500">1025 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-10.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Máy tính</a>
+                        <p class="font-xs color-gray-500">325 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-11.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Camera</a>
+                        <p class="font-xs color-gray-500">1025 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-12.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Giải trí</a>
+                        <p class="font-xs color-gray-500">6536 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-13.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Thể thao</a>
+                        <p class="font-xs color-gray-500">2458 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-14.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Máy tính bảng</a>
+                        <p class="font-xs color-gray-500">2563 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-15.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Tivi</a>
+                        <p class="font-xs color-gray-500">1025 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-16.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Đồng hồ</a>
+                        <p class="font-xs color-gray-500">1254 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-17.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Flycam</a>
+                        <p class="font-xs color-gray-500">2589 món</p>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                    <div class="box-category hover-up">
+                        <div class="image"><a href="shop-grid.html"><img src="assets/imgs/page/homepage2/cat-img-18.png" alt="Ecom"></a></div>
+                        <div class="text-info"><a class="font-sm color-gray-900 font-bold" href="shop-grid.html">Máy ảnh</a>
+                        <p class="font-xs color-gray-500">6358 món</p>
+                        </div>
+                    </div>
+                    </li>
+                </ul>
                 </div>
-                }
             </div>
             </div>
         </div>
+        </div>
     </div>
-</section>
+    </section>
 <section class="section-box pt-50">
     <div class="container">
         <div class="row">
@@ -399,75 +510,7 @@
         </div>
     </div>
     </section>
-<section class="section-box mt-90 mb-50">
-    <div class="container">
-        <ul class="list-col-5">
-            <li>
-                <div class="item-list">
-                <div class="icon-left"><img src="assets/imgs/template/secure.svg" alt="Ecom"></div>
-                    <div class="info-right">
-                    <h5 class="font-lg-bold color-gray-100">Thanh toán</h5>
-                    <p class="font-sm color-gray-500">100% An toàn</p>
-                </div>
-                </div>
-            </li>
-            <li>
-              <div class="item-list">
-                <div class="icon-left"><img src="assets/imgs/template/delivery.svg" alt="Ecom"></div>
-                <div class="info-right">
-                  <h5 class="font-lg-bold color-gray-100">Free Ship</h5>
-                  <p class="font-sm color-gray-500">Free ship toàn quốc</p>
-                </div>
-              </div>
-            </li>
-            <li>
-                <div class="item-list">
-                    <div class="icon-left"><img src="/assets/imgs/template/support.svg" alt="Ecom"></div>
-                    <div class="info-right">
-                        <h5 class="font-lg-bold color-gray-100">Hỗ trợ 24/7</h5>
-                        <p class="font-sm color-gray-500">Hỗ trợ chuyên sâu</p>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="item-list">
-                    <div class="icon-left"><img src="/assets/imgs/template/voucher.svg" alt="Ecom"></div>
-                    <div class="info-right">
-                        <h5 class="font-lg-bold color-gray-100">Gift voucher</h5>
-                        <p class="font-sm color-gray-500">Giới thiệu bạn bè</p>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="item-list">
-                    <div class="icon-left"><img src="/assets/imgs/template/return.svg" alt="Ecom"></div>
-                    <div class="info-right">
-                        <h5 class="font-lg-bold color-gray-100">Hoàn Trả</h5>
-                        <p class="font-sm color-gray-500">Hoàn trả lên đến 100%</p>
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </div>
-</section>
-<section class="section-box box-newsletter">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-md-7 col-sm-12">
-                <h3 class="color-white">Đăng Ký &amp; Nhận <span class="color-warning">10%</span> Giảm Giá</h3>
-                <p class="font-lg color-white">Nhận thông báo từ trang <span class="font-lg-bold">cho deal giảm giá.</span></p>
-            </div>
-            <div class="col-lg-4 col-md-5 col-sm-12">
-                <div class="box-form-newsletter mt-15">
-                    <form class="form-newsletter">
-                        <input class="input-newsletter font-xs" value="" placeholder="Địa chỉ email">
-                        <button class="btn btn-brand-2">Đăng ký</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
 <div class="modal fade" id="ModalQuickview" tabindex="-1" aria-hidden="true" style="display: none;">
     <div class="modal-dialog modal-xl">
         <div class="modal-content apply-job-form">
