feat: fixing upload category image

--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<p-chart type="bar" [data]="2" [options]="1" >
-</p-chart>
+<!-- <p-chart type="bar" [data]="2" [options]="1" >
+</p-chart> -->
 
 <ng-template #featuresTemplate let-context>
   <div class="col-lg-2 border-start">
